[WARP-SPEED] SIC-2995: change default warmup ttl is set to -1 so it will be deleted correctly by usage
(cherry picked from commit a6a97b52b82426158b1d6024d0da406ad3105092)